fix: enforce periodic delivery time fencing